--- a/red.html
+++ b/red.html
@@ -11,6 +11,7 @@
     <h1>hell world</h1>
     <h1>we have first commit</h1>
     <h2>hell world</h2>
+    <h3>our git class</h3>
 </body>
 
 </html>
